<resources>
    <string name="app_name">Sinhala Music App</string>
    <string name="home" translatable="false">Home</string>
    <string name="search">Search</string>
    <string name="player">Player</string>
    <string name="profile">Profile</string>
    <string name="recently_pl">Recently Played</string>

    <!--Notification Strings-->
    <string name="string_remove_from_playlist">Remove from playlist?</string>
    <string name="string_yes">yes</string>
    <string name="string_no">no</string>
    <string name="label_stop">Stop</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_play_pause">Play and pause toggle</string>
    <string name="label_previous">Previous track</string>
    <string name="label_next">Next track</string>

    <!-- Broadcast Receivers -->
    <string name="broadcast_seekbar_update">broadcast_seekbar_update</string>
    <string name="broadcast_seekbar_value">broadcast_seekbar_value</string>
    <string name="broadcast_update_ui">broadcast_update_ui</string>
    <string name="broadcast_new_media_id">broadcast_new_media_id</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_genres">GenresActivity</string>
    <string name="title_activity_consent">ConsentActivity</string>


    <string name="concent_title">Terms of Service and Usage</string>
    <string name="concent_content">
        We collect and store the personal identification information such as your name, email address , age and gender that you voluntarily provide including your music preferences
        inorder to use them as user studies for this project.We may correspond with you via email in connection to get feedback
        on usability.
    </string>
    <string name="agreement">I agree to the terms and conditions</string>

    <!--profile page strings-->
    <string name="eidtprofile">Edit Profile</string>
    <string name="notifi">Notifications</string>
    <string name="prsonlset">Settings</string>
    <string name="his">History</string>
    <string name="reset">Reset</string>
    <string name="logout">Logout</string>

</resources>
