<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/image_profile"
        android:layout_marginTop="40dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/ic_profile_logo_round"
        android:contentDescription="PROFILE PICTURE" />

    <TextView
        android:id="@+id/textViewname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/image_profile"/>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textViewname">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!--//My Playlist-->
            <TextView
                android:id="@+id/my_playlist"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:text="My playlist"
                android:textAppearance="@style/subtitle"
                android:gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/myplaylist_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_below="@+id/my_playlist">

            </android.support.v7.widget.RecyclerView>

            <!--//Top recommendations-->
            <TextView
                android:id="@+id/suggestions"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:text="We suggest more"
                android:textAppearance="@style/subtitle"
                android:gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/suggestions_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_below="@+id/suggestions">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/editprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/scrollview"
        android:paddingTop="10dp"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:text="@string/eidtprofile"
            android:textAppearance="@style/profile"
            android:background="@color/colorAccent"

            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            tools:srcCompat="@mipmap/ic_arrow_next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editprofile"
        android:paddingTop="1dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:background="@color/colorAccent"
            android:text="@string/notifi"
            android:textAppearance="@style/profile"
           />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            tools:srcCompat="@mipmap/ic_arrow_next" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/notification"
        android:paddingTop="1dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:background="@color/colorAccent"
            android:text="@string/prsonlset"
            android:textAppearance="@style/profile"
            />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            tools:srcCompat="@mipmap/ic_arrow_next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/settings"
        android:paddingTop="25dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:background="@color/colorAccent"
            android:text="@string/his"
            android:textAppearance="@style/profile"
            />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            tools:srcCompat="@mipmap/ic_arrow_next" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/history"
        android:paddingTop="1dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:background="@color/colorAccent"
            android:text="@string/reset"
            android:textAppearance="@style/profile"
            />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            tools:srcCompat="@drawable/ic_profile_arrow" />
        />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/cache"
        android:paddingTop="60dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:background="@color/colorAccent"
            android:text="@string/logout"
            android:textAppearance="@style/profile"
            />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            tools:srcCompat="@drawable/ic_profile_arrow" />

    </LinearLayout>



</RelativeLayout>